fix(labware-library): make all category visible when click on lid category
fix AUTH-1023

--- a/labware-library/src/components/App/styles.module.css
+++ b/labware-library/src/components/App/styles.module.css
@@ -70,6 +70,7 @@
   }
 
   .content_container {
+    height: 100vh;
     padding-top: var(--spacing-7);
     padding-right: var(--spacing-7);
 
